Skip to content

Preferred audio language fails for secondary audio track with .ogm files

Steps to reproduce:

  1. The "Preferred audio language:" field under the "Tracks" heading in the "Audio Settings" panel in "Simple" preferences mode is set to "jpn".

  2. An .ogm file with both an English (Track 1) and Japanese (Track 2) audio track is opened.

Expected behavior: The Japanese audio track should play.

Observed behavior: The English audio track plays.

===================================

I have noticed that for .ogm videos, not all of the meta-info (notably, the LANGUAGE attribute) is immediately loaded for the second audio track.

It appears that the info in the "Extra Metadata" tab in the "Media Information" dialog is exactly what is initially missing from the second audio track in the "Codec Details" tab. As soon as the second audio track is selected during playback, however, (Right click -> Audio -> Audio Track -> Track 2), all of the previously absent metadata is displayed in the Codec Details tab.

Since VLC seems to not have loaded the language of the second audio track upon startup, it makes sense that it is unable to select the correct audio track automatically when the preferred audio language happens not to be the first audio track.

This has not been a problem with .mkv files; for a video with two audio tracks (Track 1: English, Track 2: Japanese), when the preferred audio language is set to "jpn", the second track correctly plays.

I would also be interested in an answer to this question as a workaround: http://forum.videolan.org/viewtopic.php?f=7&t=73852&p=249898&hilit=preferred+audio#p255921

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information