demux: ogg: map language to fmt desc

refs #4175